--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,10 +5,10 @@ experiment_desc: fpn
 train:
 #  files_a: &FILES_A /datasets/my_dataset/**/*.jpg
   #可以使用绝对路径
-  files_a: &FILES_A D:/deblur/goprol_large/**/*.png
-  files_b: *FILES_A
-#  files_a: &FILES_A ./dataset1/blur/*.png
-#  files_b: &FILES_B ./dataset1/sharp/*.png
+  # files_a: &FILES_A D:/deblur/goprol_large/**/*.png
+  # files_b: *FILES_A
+  files_a: &FILES_A D:/Deblurganv2/data/archive (2)/blur_dataset_scaled/defocused_blurred/*.jpg
+  files_b: &FILES_B D:/Deblurganv2/data/archive (2)/blur_dataset_scaled/sharp/*.jpg
   size: &SIZE 256
   crop: random
   preload: &PRELOAD false
@@ -47,7 +47,7 @@ val:
 phase: train
 warmup_num: 3
 model:
-  g_name: fpn_inception
+  g_name: fpn_mobilenet
   blocks: 9
   d_name: double_gan # may be no_gan, patch_gan, double_gan, multi_scale
   d_layers: 3
